--- a/public_html/styles/style_index.css
+++ b/public_html/styles/style_index.css
@@ -4,3 +4,12 @@ body {
 	padding: 10px;
 	font-family: "arial";
 }
+
+table, th, td {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+
+th, td {
+    padding: 5px;
+}
