--- a/public_html/styles/style_index.css
+++ b/public_html/styles/style_index.css
@@ -11,5 +11,26 @@ table, th, td {
 }
 
 th, td {
-    padding: 5px;
+	padding: 5px;
 }
+
+th {
+	cursor: pointer;
+}
+
+.arrow {
+    position: relative;
+}
+.arrow:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 0; 
+    height: 0; 
+    display: block;
+    border-left: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-top: 5px solid #000;
+}
+
